--- a/index.ipynb
+++ b/index.ipynb
@@ -39,9 +39,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /opt/conda/lib/python3.6/site-packages (0.23.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.5.0 in /opt/conda/lib/python3.6/site-packages (from pandas) (2.7.3)\n",
+      "Requirement already satisfied: pytz>=2011k in /opt/conda/lib/python3.6/site-packages (from pandas) (2018.5)\n",
+      "Requirement already satisfied: numpy>=1.9.0 in /opt/conda/lib/python3.6/site-packages (from pandas) (1.14.2)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.6/site-packages (from python-dateutil>=2.5.0->pandas) (1.11.0)\n",
+      "\u001b[31mmkl-random 1.0.1 requires cython, which is not installed.\u001b[0m\n",
+      "\u001b[31mmkl-fft 1.0.2 requires cython, which is not installed.\u001b[0m\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 18.0 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "Requirement already satisfied: xlrd in /opt/conda/lib/python3.6/site-packages (1.1.0)\n",
+      "\u001b[31mmkl-random 1.0.1 requires cython, which is not installed.\u001b[0m\n",
+      "\u001b[31mmkl-fft 1.0.2 requires cython, which is not installed.\u001b[0m\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 18.0 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install pandas\n",
     "!pip install xlrd"
@@ -49,7 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +85,26 @@
     "file_name = './cities.xlsx'\n",
     "travel_df = pandas.read_excel(file_name)\n",
     "cities = travel_df.to_dict('records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(travel_df)"
    ]
   },
   {
@@ -68,51 +116,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'Area': 4758,\n",
-       "  'City': 'Buenos Aires',\n",
+       "[{'City': 'Buenos Aires',\n",
        "  'Country': 'Argentina',\n",
-       "  'Population': 2891000},\n",
-       " {'Area': 2731571,\n",
-       "  'City': 'Toronto',\n",
+       "  'Population': 2891000,\n",
+       "  'Area': 4758},\n",
+       " {'City': 'Toronto',\n",
        "  'Country': 'Canada',\n",
-       "  'Population': 2800000},\n",
-       " {'Area': 3194,\n",
-       "  'City': 'Pyeongchang',\n",
+       "  'Population': 2800000,\n",
+       "  'Area': 2731571},\n",
+       " {'City': 'Pyeongchang',\n",
        "  'Country': 'South Korea',\n",
-       "  'Population': 2581000},\n",
-       " {'Area': 200, 'City': 'Marakesh', 'Country': 'Morocco', 'Population': 928850},\n",
-       " {'Area': 491,\n",
-       "  'City': 'Albuquerque',\n",
+       "  'Population': 2581000,\n",
+       "  'Area': 3194},\n",
+       " {'City': 'Marakesh', 'Country': 'Morocco', 'Population': 928850, 'Area': 200},\n",
+       " {'City': 'Albuquerque',\n",
        "  'Country': 'New Mexico',\n",
-       "  'Population': 559277},\n",
-       " {'Area': 3750,\n",
-       "  'City': 'Los Cabos',\n",
+       "  'Population': 559277,\n",
+       "  'Area': 491},\n",
+       " {'City': 'Los Cabos',\n",
        "  'Country': 'Mexico',\n",
-       "  'Population': 287651},\n",
-       " {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 84554},\n",
-       " {'Area': 8300,\n",
-       "  'City': 'Archipelago Sea',\n",
+       "  'Population': 287651,\n",
+       "  'Area': 3750},\n",
+       " {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       " {'City': 'Archipelago Sea',\n",
        "  'Country': 'Finland',\n",
-       "  'Population': 60000},\n",
-       " {'Area': 33,\n",
-       "  'City': 'Walla Walla Valley',\n",
+       "  'Population': 60000,\n",
+       "  'Area': 8300},\n",
+       " {'City': 'Walla Walla Valley',\n",
        "  'Country': 'USA',\n",
-       "  'Population': 32237},\n",
-       " {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000},\n",
-       " {'Area': 59, 'City': 'Solta', 'Country': 'Croatia', 'Population': 1700},\n",
-       " {'Area': 672,\n",
-       "  'City': 'Iguazu Falls',\n",
+       "  'Population': 32237,\n",
+       "  'Area': 33},\n",
+       " {'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27},\n",
+       " {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       " {'City': 'Iguazu Falls',\n",
        "  'Country': 'Argentina',\n",
-       "  'Population': 0}]"
+       "  'Population': 0,\n",
+       "  'Area': 672}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,10 +242,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "y_values = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]"
@@ -212,11 +258,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "bar",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"f2a7c998-7749-4181-bc6a-aeee4b8a04ea\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f2a7c998-7749-4181-bc6a-aeee4b8a04ea\", [{\"type\": \"bar\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"f2a7c998-7749-4181-bc6a-aeee4b8a04ea\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f2a7c998-7749-4181-bc6a-aeee4b8a04ea\", [{\"type\": \"bar\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "trace_first_three_pops = {'x': x_values, 'y': y_values}\n",
+    "trace_first_three_pops = {'type': 'bar','x': x_values, 'y': y_values}\n",
     "\n",
     "\n",
     "plotly.offline.iplot([trace_first_three_pops])"
@@ -246,30 +323,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "text_values = []\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
+    "text_values = ['Buenos Aires','Toronto','Pyeongchang']\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values, 'x':x_values, 'y':y_values}\n",
+    "\n",
+    "text_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_pops['type'] # 'bar'"
+    "#bar_trace_first_three_pops['type'] # 'bar'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "type": "bar",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"c8588737-f13b-4225-a916-2bd43ff9944f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c8588737-f13b-4225-a916-2bd43ff9944f\", [{\"type\": \"bar\", \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"c8588737-f13b-4225-a916-2bd43ff9944f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c8588737-f13b-4225-a916-2bd43ff9944f\", [{\"type\": \"bar\", \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "plotly.offline.iplot([bar_trace_first_three_pops])"
+    "plotly.offline.iplot([bar_trace_first_three_pops])\n"
    ]
   },
   {
@@ -288,19 +414,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4758, 2731571, 3194]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
+    "area_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
+    "bar_trace_first_three_areas = {'type': 'scatter', 'x': x_values, 'y': area_values, 'text': text_values}\n",
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x': x_values, 'y': y_values, 'text': text_values}\n",
+    "area_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "type": "scatter",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000
+         ]
+        },
+        {
+         "text": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "type": "scatter",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "y": [
+          4758,
+          2731571,
+          3194
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"8aa6df50-3c9c-4bbd-b81e-16310d6d15a9\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8aa6df50-3c9c-4bbd-b81e-16310d6d15a9\", [{\"type\": \"scatter\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]}, {\"type\": \"scatter\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"8aa6df50-3c9c-4bbd-b81e-16310d6d15a9\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8aa6df50-3c9c-4bbd-b81e-16310d6d15a9\", [{\"type\": \"scatter\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]}, {\"type\": \"scatter\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops, bar_trace_first_three_areas])"
    ]
